Finishing CICD, Update README and mvn, enhancing test